# chirpstack-operator

./: .gitignore  Cargo.toml  Dockerfile  Makefile  PROJECT  bundle.Dockerfile  catalog-template.yaml  requirements.yml  watches.yaml
.github/workflows/: build-and-publish.yml  catalogue.yml  ci.yaml  ci.yml  images.yml  test.yml  update-catalog.yml  verify.yml
bundle/manifests/: applications.deepshore.de_chirpstacks.yaml  chirpstack-operator-controller-manager-metrics-service_v1_service.yaml  chirpstack-operator-metrics-reader_rbac.authorization.k8s.io_v1_clusterrole.yaml  chirpstack-operator.clusterserviceversion.yaml
bundle/metadata/: annotations.yaml
catalog/: build-catalog-image.sh  catalog-template.yaml  update-catalog.sh
chirpstack-operator/: Cargo.toml
chirpstack-operator/src/: crd.rs  k8s_helper.rs  lib.rs  prometheus.rs  status.rs
chirpstack-operator/src/assets/: service_monitor.yaml
chirpstack-operator/src/builder/: meta_data.rs  mod.rs
chirpstack-operator/src/builder/rest_api/: deployment.rs  service.rs
chirpstack-operator/src/builder/server/: deployment.rs  mod.rs  monitoring_service.rs  service.rs  service_account.rs  statefulset.rs
config/crd/: kustomization.yaml
config/crd/bases/: applications.deepshore.de_chirpstacks.yaml
config/default/: kustomization.yaml  manager_auth_proxy_patch.yaml
config/manager/: auth-proxy-service.yaml  kustomization.yaml  manager.yaml  metrics-service.yaml
config/manifests/: kustomization.yaml
config/manifests/bases/: chirpstack-operator.clusterserviceversion.yaml
config/prometheus/: kustomization.yaml  monitor.yaml
config/prometheus/auth-proxy/: kustomization.yaml  manager-patch.yaml  service.yaml
config/rbac/: auth_proxy_client_clusterrole.yaml  auth_proxy_role.yaml  auth_proxy_role_binding.yaml  chirpstack_editor_role.yaml  chirpstack_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
config/samples/: applications_v1alpha1_chirpstack.yaml  chirpstack-env-secrets.yaml  kustomization.yaml
config/samples/chirpstack-config.d/: region_eu868.toml
droperator/: Cargo.toml
droperator/src/: config_index.rs  error.rs  lib.rs  metadata.rs  resource_lock.rs
manifest/: crd.yaml
manifest/manager/: deployment.yaml  kustomization.yaml  rbac.yaml  service_account.yaml
molecule/default/tasks/: chirpstack_test.yml  chirpstackregion_test.yml
roles/chirpstack/defaults/: main.yml
roles/chirpstack/handlers/: main.yml  reconcile.yml
roles/chirpstack/tasks/: create_hash_secret.yml  extract_secrets.yml  main.yml  manage_envs_from_secrets.yml  manage_postgresql.yml
roles/chirpstack/tasks/reconcile/: main.yml  process_certificate.yml  process_config_map.yml  process_env_secret.yml
roles/chirpstack/tasks/secrets/: certs.yml  extract_secrets.yml  main.yml
roles/chirpstack/vars/: main.yml
sample/: chirpstack-config.yaml  kustomization.yaml
sample/chirpstack-config.d/: chirpstack.toml
script/: deploy-via-olm.sh  setup-test-env.sh  view-log.sh
src/: crd.rs  error.rs  index.rs  k8s_helper.rs  lib.rs  locks.rs  status.rs
src/builder/: meta_data.rs  mod.rs
src/builder/server/: deployment.rs  mod.rs  service.rs  service_account.rs  statefulset.rs
src/manifest/: role.yaml  role_binding.yaml
test/blackjack/: .chainsaw.yaml
test/blackjack/update-new-certificate/: test.yaml
test/blackjack/update-remove-certificate/: test.yaml
test/blackjack/update-secret-annotations/: test.yaml
test/catalog/install-via-olm-subscription/: test.yaml
test/dep/: chirpstack.yaml  kustomization.yaml  mosquitto.yaml  namespace.yaml  postgresql.yaml
test/prometheus/: kustomization.yaml  prometheus.yaml  rbac.yaml  rbac_.yaml
test/prometheus-operator/: operator.yaml
test/sample/: Makefile  applications_v1alpha1_chirpstack.yaml  chirpstack-adr-plugin-files.yaml  chirpstack-certificates.yaml  chirpstack-env-secrets.yaml  kustomization.yaml
test/sample/chirpstack-config.d/: chirpstack.toml  region_eu433.toml  region_us915_1.toml
test/script/: forward-prometheus.sh  lib.sh  prepare-with-olm-local-registry.sh  run-test-with-local-controller.sh  setup-for-local.sh  setup-from-ghcr.sh  setup-with-local-controller.sh  setup-with-olm-ghcr.sh  setup-with-olm-local-registry.sh  setup.sh
tests/: kuttl-tests.yaml
tests/k8s/0_validate_status/: 00-assert.yaml  00-install.yaml
tests/manifests/: redis.yaml
(+114 files in other folders)
