[package]
name = "co-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
fmt = "0.1.0"
futures = "0.3.31"
k8s-openapi = { version = "0.23.0", features = ["v1_31"] }
kube = { version = "0.96.0", features = ["runtime", "derive"] }
kube-core = "0.96.0"
kube-derive = "0.96.0"
kube-runtime = "0.96.0"
log = "0.4.22"
schemars = "0.8.21"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }

[[bin]]
name = "make-crd-manifest"
path = "src/bin/make-crd-manifest.rs"

[[bin]]
name = "controller"
path = "src/bin/controller.rs"
