[package]
name = "chirpstack-operator"
version = "0.1.0"
authors = ["Ole Kliemann <mail@olekliemann.de>", "Malte Groth <malte.groth@deepshore.de>"]
edition = "2021"

[dependencies]
base64 = "0.22.1"
dashmap = "6.1.0"
env_logger = "0.11.5"
fmt = "0.1.0"
futures = "0.3.31"
k8s-openapi = { version = "0.23.0", features = ["v1_31", "schemars"] }
kube = { version = "0.96.0", features = ["runtime", "derive"] }
kube-core = "0.96.0"
kube-derive = "0.96.0"
kube-runtime = "0.96.0"
log = "0.4.22"
schemars = "0.8.21"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
droperator = { path = "../droperator" }
metrics = "0.24.0"
metrics-exporter-prometheus = "0.16.0"
rustls = { version = "0.23.16", features = ["ring"] }
serde_yaml = "0.9.34"
build-info = "0.0.39"

[build-dependencies]
build-info-build = "0.0.39"

[lib]
name = "chirpstack_operator"
path = "src/lib.rs"

[[bin]]
name = "make-crd-manifest"
path = "src/bin/make-crd-manifest.rs"

[[bin]]
name = "controller"
path = "src/bin/controller.rs"
