[package]
name = "droperator"
version = "0.2.0"
authors = ["Ole Kliemann <mail@olekliemann.de>", "Malte Groth <malte.groth@deepshore.de>"]
edition = "2021"

[dependencies]
base64 = "0.22.1"
dashmap = "6.1.0"
env_logger = "0.11.8"
fmt = "0.1.0"
futures = "0.3.31"
k8s-openapi = { version = "0.26.0", features = ["v1_31"] }
kube = { version = "2.0.0", features = ["runtime", "derive"] }
kube-core = "2.0.0"
kube-derive = "2.0.0"
kube-runtime = "2.0.0"
log = "0.4.28"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
